--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>App Title</title> <script src="https://cdn.tailwindcss.com"></script>
+    <title>{% block title %}{% endblock title %}</title> <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -85,8 +85,8 @@
             <h1 class="text-3xl font-semibold text-gray-800 mb-6">Proyectos E</h1>
 
             <div class="bg-white p-6 rounded-lg shadow-md">
-                <p>This is where the main content for each page will be displayed.</p>
-                <p>Replace this section with your Django template blocks like <code>{% block content %}{% endblock %}</code>.</p>
+                {% block page_content %}
+                {% endblock page_content %}
             </div>
 
         </main>
