--- a/templates/base.html
+++ b/templates/base.html
@@ -53,12 +53,12 @@
                     </li>
                     <li>
                         <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'project_list' %}active{% endif %}"> <i class="fas fa-folder-open w-6 mr-3 text-center text-blue-300"></i>
-                            Proyectos
+                            Proyectos CC
                         </a>
                     </li>
                     <li>
                         <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'estimate_list' %}active{% endif %}"> <i class="fas fa-file-invoice-dollar w-6 mr-3 text-center text-blue-300"></i>
-                            Estimados
+                            Proyectos E
                         </a>
                     </li>
                     <li>
