--- a/templates/proyectos_e.html
+++ b/templates/proyectos_e.html
@@ -3,12 +3,16 @@
 <div class="container mx-auto px-4 py-8">
 
     <div class="mb-6"> 
+        <h1 class="text-3xl font-semibold text-gray-800 mb-6">Proyectos E</h1>
         <h3>Total Registros: {{total_proyectos}}</h3>
         <form method="get" action="" class="flex items-center space-x-2 bg-white p-3 rounded-lg shadow">
             <input
-                type="text"
-                name="q" {# Use 'q' or your preferred query parameter name #}
-                value="{{ request.GET.q|default:'' }}" {# Pre-fill with current search query #}
+                type="search"
+                name="search"
+                hx-post="/search"
+                hx-trigger="input changed delay:500ms, keyup[key=='Enter'], load"
+                hx-target="#search-results"
+                hx-indicator=".htmx-indicator"
                 placeholder="Search items..."
                 class="flex-grow px-4 py-2 border border-gray-300 rounded-l-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
             >
@@ -22,23 +26,7 @@
         </form>
     </div>
 
-    {% for item in proyectos_e %}
-    <card>
-        <div class="bg-white rounded-xl shadow-lg overflow-hidden transition-transform duration-300 ease-in-out hover:-translate-y-1 hover:shadow-xl">
-                
-                <div class="p-5">
-                    <h3 class="text-xl font-semibold text-blue-900 mb-2">{{item.proyecto}}</h3>
-                    <p class="text-gray-600 text-sm mb-4">{{item.title}}</p>
-                    <p class="text-gray-600 text-sm mb-4">Estimador: {{item.estimadores}}</p>
-                    
-                    <a href="#" class="inline-block bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium py-2 px-4 rounded-lg transition duration-200">
-                        Ver Proyecto <i class="fas fa-arrow-right ml-1 text-xs"></i>
-                    </a>
-                </div>
-            </div>
-    </card>
-<
-    {% endfor %}
+    {% include "proyectos-list-elements.html" %}
 
    </div>
 
