Search Proyectos E feature

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
 
         <aside id="sidebar" class="fixed inset-y-0 left-0 z-10 w-64 bg-blue-800 text-blue-100 p-4 transform -translate-x-full transition-transform duration-300 ease-in-out md:relative md:translate-x-0 md:flex md:flex-col shadow-lg">
             <div class="flex items-center justify-between mb-6 px-2">
-                <a href="#" class="text-2xl font-bold text-white hover:text-blue-200 transition-colors"> <i class="fas fa-rocket mr-2"></i> INIO Database
+                <a href="{% url 'home:home' %}" class="text-2xl font-bold text-white hover:text-blue-200 transition-colors"> <i class="fas fa-rocket mr-2"></i> INIO Database
                 </a>
                 <button id="close-menu-button" class="md:hidden text-blue-200 hover:text-white focus:outline-none">
                     <i class="fas fa-times"></i>
@@ -45,25 +45,36 @@
 
             <nav class="flex-1 overflow-y-auto">
                 <ul class="space-y-2">
+                    
                     <li>
-                        <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'dashboard' %}active{% endif %}">
-                            <i class="fas fa-tachometer-alt w-6 mr-3 text-center text-blue-300"></i>
-                            Dashboard
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'project_list' %}active{% endif %}"> <i class="fas fa-folder-open w-6 mr-3 text-center text-blue-300"></i>
+                        <a href="{% url 'proyectos_c:proyectos_c' %}" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'project_list' %}active{% endif %}"> <i class="fas fa-folder-open w-6 mr-3 text-center text-blue-300"></i>
                             Proyectos CC
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'estimate_list' %}active{% endif %}"> <i class="fas fa-file-invoice-dollar w-6 mr-3 text-center text-blue-300"></i>
+                        <a href="{% url 'proyectos_e:proyectos_e' %}" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'estimate_list' %}active{% endif %}"> <i class="fas fa-file-invoice-dollar w-6 mr-3 text-center text-blue-300"></i>
                             Proyectos E
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'estimate_list' %}active{% endif %}"> <i class="fas fa-file-invoice-dollar w-6 mr-3 text-center text-blue-300"></i>
+                            Proyectos SE
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'estimate_list' %}active{% endif %}"> <i class="fas fa-file-invoice-dollar w-6 mr-3 text-center text-blue-300"></i>
+                            Proyectos CM
                         </a>
                     </li>
                     <li>
                         <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'hour_log_list' %}active{% endif %}"> <i class="fas fa-clock w-6 mr-3 text-center text-blue-300"></i>
                             Horas
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'dashboard' %}active{% endif %}">
+                            <i class="fas fa-tachometer-alt w-6 mr-3 text-center text-blue-300"></i>
+                            Dashboard
                         </a>
                     </li>
                     </ul>
@@ -74,17 +85,25 @@
                     <i class="fas fa-cog w-6 mr-3 text-center"></i>
                     Settings
                 </a>
+                {% if user.is_authenticated%}
                 <a href="#" class="flex items-center px-4 py-2.5 rounded-md text-blue-200 hover:bg-blue-700 hover:text-white transition-colors duration-200">
                     <i class="fas fa-sign-out-alt w-6 mr-3 text-center"></i>
-                    Logout
+                    Cerrar Sesion
                 </a>
+                {% else %}
+                <a href="#" class="flex items-center px-4 py-2.5 rounded-md text-blue-200 hover:bg-blue-700 hover:text-white transition-colors duration-200">
+                    <i class="fas fa-sign-in-alt w-6 mr-3 text-center"></i>
+                    Iniciar Sesion
+                </a>
+                {% endif %}
+                
             </div>
         </aside>
 
-        <main class="flex-1 p-6 ">
+        <main class="flex-1 p-3 ">
             
 
-            <div class="bg-white p-6 rounded-lg shadow-md">
+            <div class="bg-white p-3 rounded-lg shadow-md min-h-screen flex justify-center items-center">
                 {% block page_content %}
                 {% endblock page_content %}
             </div>
