--- a/templates/proyectos_e.html
+++ b/templates/proyectos_e.html
@@ -5,15 +5,16 @@
     <div class="mb-6"> 
         <h1 class="text-3xl font-semibold text-gray-800 mb-6">Proyectos E</h1>
         <h3>Total Registros: {{total_proyectos}}</h3>
-        <form method="get" action="" class="flex items-center space-x-2 bg-white p-3 rounded-lg shadow">
+        <form method="GET" action="{% url 'proyectos_e:proyectos_list' %}" class="flex items-center space-x-2 bg-white p-3 rounded-lg shadow">
             <input
                 type="search"
-                name="search"
+                name="q"
                 hx-post="/search"
                 hx-trigger="input changed delay:500ms, keyup[key=='Enter'], load"
                 hx-target="#search-results"
                 hx-indicator=".htmx-indicator"
-                placeholder="Search items..."
+                placeholder="Buscar por codigo o titulo"
+                value="{{ query|default:''}}"
                 class="flex-grow px-4 py-2 border border-gray-300 rounded-l-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
             >
             <button
@@ -21,7 +22,7 @@
                 class="bg-blue-600 hover:bg-blue-700 text-white font-semibold px-5 py-2 rounded-r-md transition duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-1"
             >
                 <i class="fas fa-search mr-1"></i> {# Font Awesome icon #}
-                Search
+                Buscar
             </button>
         </form>
     </div>
