--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
 
     <div class="flex min-h-screen bg-gray-100">
 
-        <button id="mobile-menu-button" class="fixed top-4 left-4 z-20 p-2 text-gray-600 bg-white rounded-md shadow-md md:hidden focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <button title="button1" type="button" id="mobile-menu-button" class="fixed top-4 left-4 z-20 p-2 text-gray-600 bg-white rounded-md shadow-md md:hidden focus:outline-none focus:ring-2 focus:ring-blue-500">
             <i class="fas fa-bars"></i>
         </button>
 
@@ -38,7 +38,7 @@
             <div class="flex items-center justify-between mb-6 px-2">
                 <a href="{% url 'home:home' %}" class="text-2xl font-bold text-white hover:text-blue-200 transition-colors"> <i class="fas fa-rocket mr-2"></i> INIO Database
                 </a>
-                <button id="close-menu-button" class="md:hidden text-blue-200 hover:text-white focus:outline-none">
+                <button title="button2" type="button" id="close-menu-button" class="md:hidden text-blue-200 hover:text-white focus:outline-none">
                     <i class="fas fa-times"></i>
                 </button>
             </div>
