--- a/templates/proyectos_e/proyectos_e_list.html
+++ b/templates/proyectos_e/proyectos_e_list.html
@@ -26,7 +26,7 @@
     {% for item in page_obj %}
 
 <card>
-    <div class="bg-white rounded-xl shadow-lg overflow-hidden transition-transform duration-300 ease-in-out hover:-translate-y-1 hover:shadow-xl">
+    <div class="bg-white m-3 rounded-xl shadow-lg overflow-hidden transition-transform duration-300 ease-in-out hover:-translate-y-1 hover:shadow-xl">
             
             <div class="p-5">
                 <h3 class="text-xl font-semibold text-blue-900 mb-2">{{item.codigo}}</h3>
