--- a/templates/proyecto_e_detail.html
+++ b/templates/proyecto_e_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block page_content %}
-<div class="max-w-2xl mx-auto bg-white p-6 rounded-lg shadow-md">
+<div class="w-full max-w-2xl mx-auto bg-white p-6 rounded-lg shadow-md">
     <h1 class="text-2xl font-semibold text-gray-800 mb-6 border-b pb-4">Estimado Conceptual</h1>
 
     <div class="space-y-4">
@@ -124,7 +124,7 @@
 
         <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
         <div class="modal-content inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
-             <form id="#" action="{% url 'proyectos_e:proyecto_e_detail' pk=proyecto.id %}" method="DELETE">
+             <form id="#" action="{% url 'proyectos_e:proyecto_e_delete' pk=proyecto.pk %}">
                 {% csrf_token %}
                 <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
                     <div class="sm:flex sm:items-start">
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-                    <button type="submit" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm">
+                    <button type="submit"  class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm">
                         Eliminar
                     </button>
                     <button type="button" id="close-delete-modal" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
