--- a/templates/proyectos_c/proyectos_c_list.html
+++ b/templates/proyectos_c/proyectos_c_list.html
@@ -1,17 +1,41 @@
+{% extends 'base.html' %}
+{% block page_content%}
+<div class="container mx-auto px-4 py-8">
 
+    <div class="mb-6"> 
+        <h1 class="text-3xl font-semibold text-gray-800 mb-6">Busqueda de Proyectos CC</h1>
+        <button id="addRecordBtn" type="button" class="bottom-8 right-8 px-4 py-2 text-white bg-blue-600 hover:bg-blue-700 font-bold rounded-lg shadow-md transition duration-150 ease-in-out flex items-center"><i class="fas fa-add mr-1"></i>Nuevo</button>
+        <h3>Total Registros: {{total_proyectos}}</h3>
+        <form method="GET" action="{% url 'proyectos_c:proyectos-c-list' %}" class="flex items-center space-x-2 bg-white p-3 rounded-lg shadow">
+            <input
+                type="search"
+                name="q"
+                placeholder="Buscar por codigo o titulo"
+                value="{{ query|default:''}}"
+                class="flex-grow px-4 py-2 border border-gray-300 rounded-l-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+            >
+            <button
+                type="submit"
+                class="bg-blue-600 hover:bg-blue-700 text-white font-semibold px-5 py-2 rounded-r-md transition duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-1"
+            >
+                <i class="fas fa-search mr-1"></i> {# Font Awesome icon #}
+                Buscar
+            </button>
+        </form>
+    </div>
 
-{% for item in page_obj %}
+    {% for item in page_obj %}
 
 <card>
-    <div class="bg-white m-3 shadow-lg overflow-hidden transition-transform duration-300 ease-in-out hover:-translate-y-1 hover:shadow-xl">
+    <div class="bg-white m-3 rounded-xl shadow-lg overflow-hidden transition-transform duration-300 ease-in-out hover:-translate-y-1 hover:shadow-xl">
             
             <div class="p-5">
                 <h3 class="text-xl font-semibold text-blue-900 mb-2">{{item.codigo}}</h3>
                 <p class="text-gray-600 text-sm mb-4">{{item.title}}</p>
-                {% for x in item.proyectos_E_estimador_relation.all %}
+                {% for x in item.proyectos_C_estimador_relation.all %}
                 <p class="text-gray-600 text-sm mb-4">Estimador: {{x.estimador.initials}}</p>
                 {% endfor %}
-                <a href="{% url 'proyectos_e:proyecto_e_detail' pk=item.pk %}" class="inline-block bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium py-2 px-4 rounded-lg transition duration-200">
+                <a href="{% url 'proyectos_c:proyecto_c_detail' pk=item.pk %}" class="inline-block bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium py-2 px-4 rounded-lg transition duration-200">
                     Ver Proyecto <i class="fas fa-arrow-right ml-1 text-xs"></i>
                 </a>
             </div>
@@ -19,8 +43,7 @@
 </card>
 
 
-{% endfor %}
-
+{% endfor %} 
 
 <div class="pagination mt-8 mb-4">
     {# Use flexbox for layout and center items. Add spacing between elements. #}
@@ -95,4 +118,10 @@
 
     </nav>
 </div>
-    
+
+
+</div>
+
+
+  
+{% endblock page_content %}
